--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <div class="container">
         <div class="content first-content">
             <div class="first-column">
-                <h2 class="title title-primary">welcome back!</h2>
-                <p class="description description-primary">To keep connected with us</p>
-                <p class="description description-primary">please login with your personal info</p>
-                <button id="signin" class="btn btn-primary">sign in</button>
+                <h2 class="title title-primary">bem vindo!</h2>
+                <button id="signin" class="btn btn-primary">login</button>
             </div>    
      
-                <p class="description description-second">use your email for registration:</p>
+                <p class="description description-second">use seu email para logar:</p>
                 <form class="form">
                     <label class="label-input" for="">
                         <i class="far fa-user icon-modify"></i>
