--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="content first-content">
             <div class="first-column">
                 <h2 class="title title-primary">bem vindo!</h2>
+                <button><a href="login.html">logar</a></button>
                 <button id="signin" class="btn btn-primary">login</button>
             </div>    
      
