--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
+    <center>
     <div class="container">
         <div class="content first-content">
             <div class="first-column">
@@ -36,7 +37,9 @@
                     
                     <button class="btn btn-second">logar</button>        
                 </form>
-            </div><!-- second column -->
+            </div>
+        </center>
+            <!-- second column -->
         </div><!-- first content -->
         <div class="content second-content">
             <div class="first-column">
