--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             </div>
         </center>
             <!-- second column -->
-        </div><!-- first content -->
+        </div>
+        
+        <!-- first content -->
+        <center>
         <div class="content second-content">
             <div class="first-column">
                 <h2 class="title title-primary">cadastrar</h2>
@@ -68,6 +71,7 @@
             </div><!-- second column -->
         </div><!-- second-content -->
     </div>
-    <script src="js/app.js"></script>
+</center>
+    <script src="js/app.js">aaa</script>
 </body>
 </html>
