--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
 
                 </p>
                     
-                    <button class="btn btn-second">cadastrar</button>        
+                    <button class="btn btn-second"><a href="login.html">cadastrar</a></button>        
                 </form>
             </div>
         </center>
         </div>
         
+<center>
+<h5>=====================================================================</h5>
+</center>
 
-====================================================================================================
 
- 
         <center>
         <div class="content second-content">
             <div class="first-column">
@@ -79,7 +80,7 @@
                 </p>
                 <p>
                     <a class="password" href="#"><a href="senha.html">esqueceu a senha?</a></a>
-                    <button class="btn btn-second">enter</button>
+                    <button class="btn btn-second"><a href="login.html">logar</a></button>
                 </form>
               </p>
             </div>
