--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 </p>
                     
-                    <button class="btn btn-second"><a href="login.html">cadastrar</a></button>        
+                    <button class="btn-second">cadastrar</button>        
                 </form>
             </div>
         </center>
