--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </div>
     </div>
 </center>
-    <script src="js/app.js">aaa</script>
+<link rel="stylesheet" href="github.com">
+    <script src="js/app.js"></script>
 </body>
 </html>
