--- a/index.html
+++ b/index.html
@@ -80,15 +80,18 @@
                 </p>
                 <p>
                     <a class="password" href="#"><a href="senha.html">esqueceu a senha?</a></a>
-                    <button class="btn btn-second"><a href="login.html">logar</a></button>
+                    <button class="btnSignup">login</button>
                 </form>
               </p>
             </div>
         </div>
     </div>
 </center>
-<link rel="stylesheet" href="github.com">
-<LInk>https://portezera.github.io/apresentacao/</LInk>
+
+
+
+
+
     <script src="js/app.js"></script>
 </body>
 </html>
