--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </label>
                 </p>
                 <p>
-                    <a class="password" href="#"><a href="senha.html">esqueceu a senha?</a></a>
+                    <a class="password" href="#">esqueceu a senha?</a>
                     <button class="btnSignup">login</button>
                 </form>
               </p>
