--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 </p>
                     
-                    <button class="btn-second">cadastrar</button>        
+                    <button class="btnSignup">cadastrar</button>        
                 </form>
             </div>
         </center>
@@ -80,7 +80,7 @@
                 </p>
                 <p>
                     <a class="password" href="#">esqueceu a senha?</a>
-                    <button class="btnSignup">login</button>
+                    <button class="btnSignin">login</button>
                 </form>
               </p>
             </div>
