--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
        body{
         background-color: beige;
-
+        bottom: unset;color: #a3c21a;
        }
     </style>
 </head>
@@ -90,8 +90,6 @@
         </div>
     </div>
 </center>
-
-<a href="https://portezera.github.io/apresentacao/">site 1</a>
 
 
     <script src="js/app.js"></script>
