--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
        body{
         background-color: beige;
         bottom: unset;color: #a3c21a;
+
+       }
+       h1.principal{
+       color: blue;
        }
     </style>
 </head>
@@ -19,7 +23,7 @@
 <div class="container">
         <div class="content first-content">
             <div class="first-column">
-                <h2 class="title title-primary">bem vindo!</h2>
+                <h2 class="principal">bem vindo!</h2>
                 <h2 class="title title-primary">cadastro</h2>
             </div>    
      
