--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         background-color: beige;
 
        }
-       h1.principal{
-       color: blue;
+       .botao1{
+       color: rgb(17, 201, 48);
        }
     </style>
 </head>
@@ -53,7 +53,7 @@
 
                 </p>
                     
-                    <button class="btnSignup">cadastrar</button>        
+                    <button  class="btnSignup","botao1">cadastrar</button>        
                 </form>
             </div>
         </center>
